==> vpcola/lpc1768/SPI_TFT_ILI9341/SPI_TFT_ILI9341_NXP.cpp <==
#include "SPI_TFT_ILI9341.h"
#include "mbed.h"
#define use_ram
#define DMA_CHANNEL_ENABLE      1
#define DMA_TRANSFER_TYPE_M2P   (1UL << 11)
#define DMA_CHANNEL_TCIE        (1UL << 31)
#define DMA_CHANNEL_SRC_INC     (1UL << 26)
#define DMA_MASK_IE             (1UL << 14)
#define DMA_MASK_ITC            (1UL << 15)
#define DMA_SSP1_TX             (1UL << 2)
#define DMA_SSP0_TX             (0)
#define DMA_DEST_SSP1_TX        (2UL << 6)
#define DMA_DEST_SSP0_TX        (0UL << 6)
#define BPP         16                  // Bits per pixel

void SPI_TFT_ILI9341::tft_reset()
{
    _cs = 1;                           // cs high
    _dc = 1;                           // dc high
    _reset = 0;                        // display reset

    wait_us(50);
    _reset = 1;                       // end hardware reset
    wait_ms(5);

    wr_cmd(0x01);                     // SW reset
    wait_ms(5);
    wr_cmd(0x28);                     // display off

    /* Start Initial Sequence ----------------------------------------------------*/
    wr_cmd(0xCF);
    f_write(0x00);
    f_write(0x83);
    f_write(0x30);
    spi_bsy();
    _cs = 1;

    wr_cmd(0xED);
    f_write(0x64);
    f_write(0x03);
    f_write(0x12);
    f_write(0x81);
    spi_bsy();
    _cs = 1;

    wr_cmd(0xE8);
    f_write(0x85);
    f_write(0x01);
    f_write(0x79);
    spi_bsy();
    _cs = 1;

    wr_cmd(0xCB);
    f_write(0x39);
    f_write(0x2C);
    f_write(0x00);
    f_write(0x34);
    f_write(0x02);
    spi_bsy();
    _cs = 1;

    wr_cmd(0xF7);
    f_write(0x20);
    spi_bsy();
    _cs = 1;

    wr_cmd(0xEA);
    f_write(0x00);
    f_write(0x00);
    spi_bsy();
    _cs = 1;

    wr_cmd(0xC0);                     // POWER_CONTROL_1
    f_write(0x26);
    spi_bsy();
    _cs = 1;

    wr_cmd(0xC1);                     // POWER_CONTROL_2
    f_write(0x11);
    spi_bsy();
    _cs = 1;

    wr_cmd(0xC5);                     // VCOM_CONTROL_1
    f_write(0x35);
    f_write(0x3E);
    spi_bsy();
    _cs = 1;

    wr_cmd(0xC7);                     // VCOM_CONTROL_2
    f_write(0xBE);
    spi_bsy();
    _cs = 1;

    wr_cmd(0x36);                     // MEMORY_ACCESS_CONTROL
    f_write(0x48);
    spi_bsy();
    _cs = 1;

    wr_cmd(0x3A);                     // COLMOD_PIXEL_FORMAT_SET
    f_write(0x55);                 // 16 bit pixel
    spi_bsy();
    _cs = 1;

    wr_cmd(0xB1);                     // Frame Rate
    f_write(0x00);
    f_write(0x1B);
    spi_bsy();
    _cs = 1;

    wr_cmd(0xF2);                     // Gamma Function Disable
    f_write(0x08);
    spi_bsy();
    _cs = 1;

    wr_cmd(0x26);
    f_write(0x01);                 // gamma set for curve 01/2/04/08
    spi_bsy();
    _cs = 1;

    wr_cmd(0xE0);                     // positive gamma correction
    f_write(0x1F);
    f_write(0x1A);
    f_write(0x18);
    f_write(0x0A);
    f_write(0x0F);
    f_write(0x06);
    f_write(0x45);
    f_write(0x87);
    f_write(0x32);
    f_write(0x0A);
    f_write(0x07);
    f_write(0x02);
    f_write(0x07);
    f_write(0x05);
    f_write(0x00);
    spi_bsy();
    _cs = 1;

    wr_cmd(0xE1);                     // negativ gamma correction
    f_write(0x00);
    f_write(0x25);
    f_write(0x27);
    f_write(0x05);
    f_write(0x10);
    f_write(0x09);
    f_write(0x3A);
    f_write(0x78);
    f_write(0x4D);
    f_write(0x05);
    f_write(0x18);
    f_write(0x0D);
    f_write(0x38);
    f_write(0x3A);
    f_write(0x1F);
    spi_bsy();
    _cs = 1;

    WindowMax ();

    //wr_cmd(0x34);                     // tearing effect off
    //_cs = 1;

    //wr_cmd(0x35);                     // tearing effect on
    //_cs = 1;

    wr_cmd(0xB7);                       // entry mode
    f_write(0x07);
    spi_bsy();
    _cs = 1;

    wr_cmd(0xB6);                       // display function control
    f_write(0x0A);
    f_write(0x82);
    f_write(0x27);
    f_write(0x00);
    spi_bsy();
    _cs = 1;

    wr_cmd(0x11);                     // sleep out
    spi_bsy();
    _cs = 1;

    wait_ms(100);

    wr_cmd(0x29);                     // display on
    spi_bsy();
    _cs = 1;

    wait_ms(100);

    // setup DMA channel 0
    LPC_SC->PCONP |= (1UL << 29);       // Power up the GPDMA.
    LPC_GPDMA->DMACConfig = 1;          // enable DMA controller
    LPC_GPDMA->DMACIntTCClear = 0x1;    // Reset the Interrupt status
    LPC_GPDMA->DMACIntErrClr = 0x1;
    LPC_GPDMACH0->DMACCLLI   = 0;
}

void SPI_TFT_ILI9341::fillrect(int x0, int y0, int x1, int y1, int color)
{
    int h = y1 - y0 + 1;
    int w = x1 - x0 + 1;
    int pixel = h * w;
    unsigned int dma_count;
    window(x0,y0,w,h);

    wr_cmd(0x2C);  // send pixel
    spi_16(1);

    LPC_GPDMACH0->DMACCSrcAddr = (uint32_t)&color;

    switch(spi_num) {       // decide which SPI is to use
        case (0):
            LPC_GPDMACH0->DMACCDestAddr = (uint32_t)&LPC_SSP0->DR; // we send to SSP0
            LPC_SSP0->DMACR = 0x2;
            break;
        case (1):
            LPC_GPDMACH0->DMACCDestAddr = (uint32_t)&LPC_SSP1->DR; // we send to SSP1
            LPC_SSP1->DMACR = 0x2;
            break;
    }

    // start DMA
    do {
        if (pixel > 4095) {
            dma_count = 4095;
            pixel = pixel - 4095;
        } else {
            dma_count = pixel;
            pixel = 0;
        }
        LPC_GPDMA->DMACIntTCClear = 0x1;
        LPC_GPDMA->DMACIntErrClr = 0x1;
        LPC_GPDMACH0->DMACCControl = dma_count | (1UL << 18) | (1UL << 21) | (1UL << 31) ; // 16 bit transfer , no address increment, interrupt
        LPC_GPDMACH0->DMACCConfig  = DMA_CHANNEL_ENABLE | DMA_TRANSFER_TYPE_M2P | (spi_num ? DMA_DEST_SSP1_TX : DMA_DEST_SSP0_TX);
        LPC_GPDMA->DMACSoftSReq = 0x1;   // DMA request
        do {
        } while ((LPC_GPDMA->DMACRawIntTCStat & 0x01) == 0); // DMA is running
    } while (pixel > 0);

    spi_bsy();    // wait for end of transfer
    spi_16(0);
    _cs = 1;
    WindowMax();
    return;
}

void SPI_TFT_ILI9341::character(int x, int y, int c)
{
    unsigned int hor,vert,offset,bpl,j,i,b;
    unsigned char* zeichen;
    unsigned char z,w;
#ifdef use_ram
    unsigned int pixel;
    unsigned int p;
    unsigned int dma_count,dma_off;
    uint16_t *buffer;
#endif

    if ((c < 31) || (c > 127)) return;   // test char range

    // read font parameter from start of array
    offset = font[0];                    // bytes / char
    hor = font[1];                       // get hor size of font
    vert = font[2];                      // get vert size of font
    bpl = font[3];                       // bytes per line

    if (char_x + hor > width()) {
        char_x = 0;
        char_y = char_y + vert;
        if (char_y >= height() - font[2]) {
            char_y = 0;
        }
    }
    window(char_x, char_y,hor,vert);           // setup char box
    wr_cmd(0x2C);
    spi_16(1);                                 // switch to 16 bit Mode
#ifdef use_ram
    pixel = hor * vert;                        // calculate buffer size
    buffer = (uint16_t *) malloc (2*pixel);    // we need a buffer for the font
    if(buffer != NULL) {                       // there is memory space -> use dma
        zeichen = &font[((c -32) * offset) + 4]; // start of char bitmap
        w = zeichen[0];                          // width of actual char
        p = 0;
        // construct the font into the buffer
        for (j=0; j<vert; j++) {            //  vert line
            for (i=0; i<hor; i++) {         //  horz line
                z =  zeichen[bpl * i + ((j & 0xF8) >> 3)+1];
                b = 1 << (j & 0x07);
                if (( z & b ) == 0x00) {
                    buffer[p] = _background;
                } else {
                    buffer[p] = _foreground;
                }
                p++;
            }
        }
        // copy the buffer with DMA SPI to display
        dma_off = 0;  // offset for DMA transfer

        switch(spi_num) {       // decide which SPI is to use
            case (0):
                LPC_GPDMACH0->DMACCDestAddr = (uint32_t)&LPC_SSP0->DR; // we send to SSP0
                LPC_SSP0->DMACR = 0x2;
                break;
            case (1):
                LPC_GPDMACH0->DMACCDestAddr = (uint32_t)&LPC_SSP1->DR; // we send to SSP1
                LPC_SSP1->DMACR = 0x2;
                break;
        }
        // start DMA
        do {
            if (pixel > 4095) {         // this is a giant font !
                dma_count = 4095;
                pixel = pixel - 4095;
            } else {
                dma_count = pixel;
                pixel = 0;
            }
            LPC_GPDMA->DMACIntTCClear = 0x1;
            LPC_GPDMA->DMACIntErrClr = 0x1;
            LPC_GPDMACH0->DMACCSrcAddr = (uint32_t) (buffer + dma_off);
            LPC_GPDMACH0->DMACCControl = dma_count | (1UL << 18) | (1UL << 21) | (1UL << 31) |  DMA_CHANNEL_SRC_INC ; // 16 bit transfer , address increment, interrupt
            LPC_GPDMACH0->DMACCConfig  = DMA_CHANNEL_ENABLE | DMA_TRANSFER_TYPE_M2P | (spi_num ? DMA_DEST_SSP1_TX : DMA_DEST_SSP0_TX);
            LPC_GPDMA->DMACSoftSReq = 0x1;
            do {
            } while ((LPC_GPDMA->DMACRawIntTCStat & 0x01) == 0); // DMA is running
            dma_off = dma_off + dma_count;
        } while (pixel > 0);


        spi_bsy();
        free ((uint16_t *) buffer);
        spi_16(0);
    }

    else {
#endif
        zeichen = &font[((c -32) * offset) + 4]; // start of char bitmap
        w = zeichen[0];                          // width of actual char
        for (j=0; j<vert; j++) {  //  vert line
            for (i=0; i<hor; i++) {   //  horz line
                z =  zeichen[bpl * i + ((j & 0xF8) >> 3)+1];
                b = 1 << (j & 0x07);
                if (( z & b ) == 0x00) {
                    f_write(_background);
                } else {
                    f_write(_foreground);
                }
            }
        }
        spi_bsy();
        _cs = 1;
        spi_16(0);
#ifdef use_ram
    }
#endif
    _cs = 1;
    WindowMax();
    if ((w + 2) < hor) {                   // x offset to next char
        char_x += w + 2;
    } else char_x += hor;
}
