==> vpcola/lpc1768/SPI_TFT_ILI9341/SPI_TFT_ILI9341_NUCLEO.cpp <==
#include "SPI_TFT_ILI9341.h"
#include "mbed.h"
#include "stm32l1xx_dma.h"
#define use_ram
#include "stm32f10x_dma.h"
#define BPP         16                  // Bits per pixel
#define bit_SPI1_txe  *((volatile unsigned int *)0x42260104)
#define SPI1_DR       *((volatile unsigned int *)0x4001300C)
#define bit_SPI2_txe  *((volatile unsigned int *)0x42070104)
#define SPI2_DR       *((volatile unsigned int *)0x4000380C)
#define bit_SPI3_txe  *((volatile unsigned int *)0x42078104)
#define SPI3_DR       *((volatile unsigned int *)0x40003C0C)

void SPI_TFT_ILI9341::tft_reset()
{
    _cs = 1;                           // cs high
    _dc = 1;                           // dc high
    _reset = 0;                        // display reset

    wait_us(50);
    _reset = 1;                       // end hardware reset
    wait_ms(5);

    wr_cmd(0x01);                     // SW reset
    wait_ms(5);
    wr_cmd(0x28);                     // display off

    /* Start Initial Sequence ----------------------------------------------------*/
    wr_cmd(0xCF);
    f_write(0x00);
    f_write(0x83);
    f_write(0x30);
    spi_bsy();
     _cs = 1;

     wr_cmd(0xED);
     f_write(0x64);
     f_write(0x03);
     f_write(0x12);
     f_write(0x81);
     spi_bsy();
     _cs = 1;

     wr_cmd(0xE8);
     f_write(0x85);
     f_write(0x01);
     f_write(0x79);
     spi_bsy();
     _cs = 1;

     wr_cmd(0xCB);
     f_write(0x39);
     f_write(0x2C);
     f_write(0x00);
     f_write(0x34);
     f_write(0x02);
     spi_bsy();
     _cs = 1;

     wr_cmd(0xF7);
     f_write(0x20);
     spi_bsy();
     _cs = 1;

     wr_cmd(0xEA);
     f_write(0x00);
     f_write(0x00);
     spi_bsy();
     _cs = 1;

     wr_cmd(0xC0);                     // POWER_CONTROL_1
     f_write(0x26);
     spi_bsy();
     _cs = 1;

     wr_cmd(0xC1);                     // POWER_CONTROL_2
     f_write(0x11);
     spi_bsy();
     _cs = 1;

     wr_cmd(0xC5);                     // VCOM_CONTROL_1
     f_write(0x35);
     f_write(0x3E);
     spi_bsy();
     _cs = 1;

     wr_cmd(0xC7);                     // VCOM_CONTROL_2
     f_write(0xBE);
     spi_bsy();
     _cs = 1;

     wr_cmd(0x36);                     // MEMORY_ACCESS_CONTROL
     f_write(0x48);
     spi_bsy();
     _cs = 1;

     wr_cmd(0x3A);                     // COLMOD_PIXEL_FORMAT_SET
     f_write(0x55);                 // 16 bit pixel
     spi_bsy();
     _cs = 1;

     wr_cmd(0xB1);                     // Frame Rate
     f_write(0x00);
     f_write(0x1B);
     spi_bsy();
     _cs = 1;

     wr_cmd(0xF2);                     // Gamma Function Disable
     f_write(0x08);
     spi_bsy();
     _cs = 1;

     wr_cmd(0x26);
     f_write(0x01);                 // gamma set for curve 01/2/04/08
     spi_bsy();
     _cs = 1;

     wr_cmd(0xE0);                     // positive gamma correction
     f_write(0x1F);
     f_write(0x1A);
     f_write(0x18);
     f_write(0x0A);
     f_write(0x0F);
     f_write(0x06);
     f_write(0x45);
     f_write(0x87);
     f_write(0x32);
     f_write(0x0A);
     f_write(0x07);
     f_write(0x02);
     f_write(0x07);
     f_write(0x05);
     f_write(0x00);
     spi_bsy();
     _cs = 1;

     wr_cmd(0xE1);                     // negativ gamma correction
     f_write(0x00);
     f_write(0x25);
     f_write(0x27);
     f_write(0x05);
     f_write(0x10);
     f_write(0x09);
     f_write(0x3A);
     f_write(0x78);
     f_write(0x4D);
     f_write(0x05);
     f_write(0x18);
     f_write(0x0D);
     f_write(0x38);
     f_write(0x3A);
     f_write(0x1F);
     spi_bsy();
     _cs = 1;

     WindowMax ();

     //wr_cmd(0x34);                     // tearing effect off
     //_cs = 1;

     //wr_cmd(0x35);                     // tearing effect on
     //_cs = 1;

     wr_cmd(0xB7);                       // entry mode
     f_write(0x07);
     spi_bsy();
     _cs = 1;

     wr_cmd(0xB6);                       // display function control
     f_write(0x0A);
     f_write(0x82);
     f_write(0x27);
     f_write(0x00);
     spi_bsy();
     _cs = 1;

     wr_cmd(0x11);                     // sleep out
     spi_bsy();
     _cs = 1;

     wait_ms(100);

     wr_cmd(0x29);                     // display on
     spi_bsy();
     _cs = 1;

     wait_ms(100);

    //    Configure the DMA controller init-structure
    DMA_StructInit(&DMA_InitStructure);
    switch(spi_num){        // decide which SPI is to use
    case (1):
        RCC_AHBPeriphClockCmd(RCC_AHBPeriph_DMA1, ENABLE);    // SPI1 and SPI2 are using DMA 1
        DMA_InitStructure.DMA_PeripheralBaseAddr  = (uint32_t) &(SPI1->DR);
        break;
    case (2):
        RCC_AHBPeriphClockCmd(RCC_AHBPeriph_DMA1, ENABLE);    // SPI1 and SPI2 are using DMA 1
        DMA_InitStructure.DMA_PeripheralBaseAddr  = (uint32_t) &(SPI2->DR);
        break;
    case (3):
        RCC_AHBPeriphClockCmd(RCC_AHBPeriph_DMA2, ENABLE);    // SPI3 is using DMA 2
        DMA_InitStructure.DMA_PeripheralBaseAddr  = (uint32_t) &(SPI3->DR);
        break;
    }
    DMA_InitStructure.DMA_DIR = DMA_DIR_PeripheralDST;
    DMA_InitStructure.DMA_M2M = DMA_M2M_Disable;
    DMA_InitStructure.DMA_BufferSize  = 0;
    DMA_InitStructure.DMA_PeripheralInc  = DMA_PeripheralInc_Disable;
    DMA_InitStructure.DMA_PeripheralDataSize  = DMA_PeripheralDataSize_HalfWord;
    DMA_InitStructure.DMA_MemoryDataSize  = DMA_MemoryDataSize_HalfWord;
    DMA_InitStructure.DMA_Mode  = DMA_Mode_Normal;
    DMA_InitStructure.DMA_Priority  = DMA_Priority_High;
 }

void SPI_TFT_ILI9341::fillrect(int x0, int y0, int x1, int y1, int color)
{

    int h = y1 - y0 + 1;
    int w = x1 - x0 + 1;
    int pixel = h * w;
    unsigned int dma_transfer;
    window(x0,y0,w,h);

    wr_cmd(0x2C);  // send pixel
    spi_16(1);
    DMA_InitStructure.DMA_MemoryBaseAddr  = (uint32_t) &color;
    DMA_InitStructure.DMA_MemoryInc  = DMA_MemoryInc_Disable;

    switch(spi_num){        // decide which SPI is to use
    case (1):
        DMA_Init(DMA1_Channel3, &DMA_InitStructure);  // init the DMA
        do{
            if(pixel < 0x10000) {
                dma_transfer = pixel;
                pixel = 0;
            }
            else {
                dma_transfer = 0xffff;
                pixel = pixel - 0xffff;
            }
            DMA_SetCurrDataCounter(DMA1_Channel3, dma_transfer);
            SPI_I2S_DMACmd(SPI1, SPI_I2S_DMAReq_Tx,ENABLE);
            DMA_Cmd(DMA1_Channel3, ENABLE);
            while(DMA_GetCurrDataCounter(DMA1_Channel3) != 0);     // wait for end of transfer
            DMA_Cmd(DMA1_Channel3, DISABLE);
        }while(pixel > 0);
        break;

    case (2):
        DMA_Init(DMA1_Channel5, &DMA_InitStructure);  // init the DMA
        do{
            if(pixel < 0x10000) {
                dma_transfer = pixel;
                pixel = 0;
            }
            else {
                dma_transfer = 0xffff;
                pixel = pixel - 0xffff;
            }
            DMA_SetCurrDataCounter(DMA1_Channel5, dma_transfer);
            SPI_I2S_DMACmd(SPI2, SPI_I2S_DMAReq_Tx,ENABLE);
            DMA_Cmd(DMA1_Channel5, ENABLE);
            while(DMA_GetCurrDataCounter(DMA1_Channel5) != 0);     // wait for end of transfer
            DMA_Cmd(DMA1_Channel5, DISABLE);
        }while(pixel > 0);
        break;

    case (3):
        DMA_Init(DMA2_Channel2, &DMA_InitStructure);  // init the DMA
        do{
            if(pixel < 0x10000) {
                dma_transfer = pixel;
                pixel = 0;
            }
            else {
                dma_transfer = 0xffff;
                pixel = pixel - 0xffff;
            }
            DMA_SetCurrDataCounter(DMA2_Channel2, dma_transfer);
            SPI_I2S_DMACmd(SPI3, SPI_I2S_DMAReq_Tx,ENABLE);
            DMA_Cmd(DMA2_Channel2, ENABLE);
            while(DMA_GetCurrDataCounter(DMA2_Channel2) != 0);     // wait for end of transfer
            DMA_Cmd(DMA2_Channel2, DISABLE);
        }while(pixel > 0);
        break;
    }
    spi_bsy();
    spi_16(0);
    _cs = 1;
    WindowMax();
    return;
}

void SPI_TFT_ILI9341::character(int x, int y, int c)
{
    unsigned int hor,vert,offset,bpl,j,i,b;
    unsigned char* zeichen;
    unsigned char z,w;
    #ifdef use_ram
    unsigned int pixel;
    unsigned int p;
    unsigned int dma_count,dma_off;
    uint16_t *buffer;
    #endif

    if ((c < 31) || (c > 127)) return;   // test char range

    // read font parameter from start of array
    offset = font[0];                    // bytes / char
    hor = font[1];                       // get hor size of font
    vert = font[2];                      // get vert size of font
    bpl = font[3];                       // bytes per line

    if (char_x + hor > width()) {
        char_x = 0;
        char_y = char_y + vert;
        if (char_y >= height() - font[2]) {
            char_y = 0;
        }
    }
    window(char_x, char_y,hor,vert);           // setup char box
    wr_cmd(0x2C);
    spi_16(1);                                 // switch to 16 bit Mode
    #ifdef use_ram
    pixel = hor * vert;                        // calculate buffer size
    buffer = (uint16_t *) malloc (2*pixel);    // we need a buffer for the font
    if(buffer != NULL) {                       // there is memory space -> use dma
        zeichen = &font[((c -32) * offset) + 4]; // start of char bitmap
        w = zeichen[0];                          // width of actual char
        p = 0;
        // construct the font into the buffer
        for (j=0; j<vert; j++) {            //  vert line
            for (i=0; i<hor; i++) {         //  horz line
                z =  zeichen[bpl * i + ((j & 0xF8) >> 3)+1];
                b = 1 << (j & 0x07);
                if (( z & b ) == 0x00) {
                    buffer[p] = _background;
                } else {
                    buffer[p] = _foreground;
                }
                p++;
            }
        }
        // copy the buffer with DMA SPI to display
        dma_off = 0;  // offset for DMA transfer
        DMA_InitStructure.DMA_MemoryBaseAddr  = (uint32_t)  (buffer + dma_off);
        DMA_InitStructure.DMA_MemoryInc  = DMA_MemoryInc_Enable;

        switch(spi_num){        // decide which SPI is to use
        case (1):
        DMA_Init(DMA1_Channel3, &DMA_InitStructure);  // init the DMA
        // start DMA
         do {
            if (pixel > 0X10000) {         // this is a giant font !
                dma_count = 0Xffff;
                pixel = pixel - 0Xffff;
            } else {
                dma_count = pixel;
                pixel = 0;
            }
            DMA_SetCurrDataCounter(DMA1_Channel3, dma_count);
            SPI_I2S_DMACmd(SPI1, SPI_I2S_DMAReq_Tx,ENABLE);
            DMA_Cmd(DMA1_Channel3, ENABLE);
            while(DMA_GetCurrDataCounter(DMA1_Channel3) != 0);     // wait for end of transfer
            DMA_Cmd(DMA1_Channel3, DISABLE);
        }while(pixel > 0);
        break;

        case (2):
        DMA_Init(DMA1_Channel5, &DMA_InitStructure);  // init the DMA
        // start DMA
         do {
            if (pixel > 0X10000) {         // this is a giant font !
                dma_count = 0Xffff;
                pixel = pixel - 0Xffff;
            } else {
                dma_count = pixel;
                pixel = 0;
            }
            DMA_SetCurrDataCounter(DMA1_Channel5, dma_count);
            SPI_I2S_DMACmd(SPI2, SPI_I2S_DMAReq_Tx,ENABLE);
            DMA_Cmd(DMA1_Channel5, ENABLE);
            while(DMA_GetCurrDataCounter(DMA1_Channel5) != 0);     // wait for end of transfer
            DMA_Cmd(DMA1_Channel5, DISABLE);
        }while(pixel > 0);
        break;

        case (3):
        DMA_Init(DMA2_Channel2, &DMA_InitStructure);  // init the DMA
        // start DMA
         do {
            if (pixel > 0X10000) {         // this is a giant font !
                dma_count = 0Xffff;
                pixel = pixel - 0Xffff;
            } else {
                dma_count = pixel;
                pixel = 0;
            }
            DMA_SetCurrDataCounter(DMA2_Channel2, dma_count);
            SPI_I2S_DMACmd(SPI3, SPI_I2S_DMAReq_Tx,ENABLE);
            DMA_Cmd(DMA2_Channel2, ENABLE);
            while(DMA_GetCurrDataCounter(DMA2_Channel2) != 0);     // wait for end of transfer
            DMA_Cmd(DMA2_Channel2, DISABLE);
        }while(pixel > 0);
        break;

        }
        spi_bsy();
        free ((uint16_t *) buffer);
        spi_16(0);
    }
    
    else{
        #endif
        zeichen = &font[((c -32) * offset) + 4]; // start of char bitmap
        w = zeichen[0];                          // width of actual char
        for (j=0; j<vert; j++) {  //  vert line
            for (i=0; i<hor; i++) {   //  horz line
                z =  zeichen[bpl * i + ((j & 0xF8) >> 3)+1];
                b = 1 << (j & 0x07);
                if (( z & b ) == 0x00) {
                  f_write(_background);
                } else {
                  f_write(_foreground);
                }
            }
        }
        spi_bsy();
        _cs = 1;
        spi_16(0);
    #ifdef use_ram   
    }
    #endif    
    _cs = 1;
    WindowMax();
    if ((w + 2) < hor) {                   // x offset to next char
        char_x += w + 2;
    } else char_x += hor;
}
